[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-stm32 = { version  = "0.1", features = ["stm32f070rb", "memory-x", "time-driver-any"] }
embassy-time = "0.3"
panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
